# nightshift

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  config.json  justfile  provision.sh  pyproject.toml
.claude/: .gitignore
.claude/skills/: nightshift.md  task.md
.cursor/rules/: model-selection.mdc  sentence-per-line.mdc
.github/workflows/: nightshift.yml
.tasks/: 00.daily_questions.md  01.daily_todos.md
docs/: NIGHTSHIFT.md  REACT_UI.md  configuration-reference.md  nightshift.md  setup-guide.md
docs/analysis/: agentic-anthropic-backend.md
docs/implemented/: 2026-06-26-provider-qualified-models.md  2026-07-16-workflows-implementation-plan.md  2026-07-17-workflow-stats-implementation-plan.md  greenfield-task-lifecycle.md  measure-forward-analytics.md  rebuild-in-place-migration-plan.md  settings-1-config-model.md  settings-2-admin-api.md
docs/plan/: 2026-07-16-workflows-implementation-plan.md  2026-07-18-task-documents.md
docs/plans/: 2026-06-26-provider-qualified-models.md
docs/reviews/: 2026-07-04-repo-design-conformance.md  2026-07-18-vscode-extension-feasibility.md  agentic-anthropic-backend.md  git-management-review.md  retry-failure-state.md
docs/spec/: 2026-06-18-nightshift-narrow-dirty-main-check-design_done.md  2026-07-03-token-usage-analysis.md  (+27 more)
tests/: _workspace.py  test_agent_apply.py  test_agent_loop.py  test_agent_tools.py  test_agent_transport.py  test_backends_dispatch.py  test_config_model.py  test_enhance.py  test_env_preflight.py  test_failure_policy.py  test_git_executor.py  test_git_seam.py  test_import_boundaries.py  test_land_recovery.py  test_lifecycle.py  test_local_git_ops.py  test_model_id.py  test_nightshift_agent_backend.py  test_nightshift_config.py  test_nightshift_landing.py  test_nightshift_manager.py  test_nightshift_scheduler.py  test_nightshift_store.py  test_nightshift_ui.py  test_nightshift_worker.py  test_nightshift_workflow.py  test_playlist_info_rescan.py  test_plumbing_land.py  test_price.py  test_prompts.py  test_reconciler.py  test_remote_landing.py  test_repo_tasks.py  test_repos.py  test_resolve_runner.py  test_restart_affordance.py  test_run_local.py  test_settings_api.py  test_slack_intake.py  test_slack_notify.py  (+8 more)
tools/: smoke.py
(+223 files in other folders)
